# orderflow-bubbles

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  index.html  package-lock.json  package.json  railway.toml  valentini-complete-strategy-guide.md
data/NQ_11_23_2025-12_23_2025/: condition.json  glbx-mdp3-20251123.trades.csv.zst  glbx-mdp3-20251127.trades.csv.zst  glbx-mdp3-20251128.trades.csv.zst  glbx-mdp3-20251130.trades.csv.zst  glbx-mdp3-20251207.trades.csv.zst  glbx-mdp3-20251214.trades.csv.zst  glbx-mdp3-20251221.trades.csv.zst  manifest.json  metadata.json  symbology.csv  symbology.json
src/: App.css  App.tsx  BubbleRenderer.tsx  StatsCharts.tsx  StatsPage.tsx  api.rs  lib.rs  main.rs  processing.rs  supabase.rs  types.rs  websocket.ts
src/pipeline/: backtest.rs  bars.rs  impulse.rs  levels.rs  lvn.rs  main.rs  replay.rs  supabase.rs  trades.rs
src/streams/: db_replay.rs  demo.rs  live.rs  local_replay.rs  mod.rs  replay.rs
