[package]
name = "orderflow-bubbles"
version = "0.1.0"
edition = "2021"
description = "Real-time orderflow aggression bubble visualization for NQ/ES futures"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Databento client
databento = "0.15"

# Web server + WebSocket
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
